--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ng-table-plugins",
   "version": "0.1.0",
   "author": "Christian Behon <christian.behon@knusperleicht.at",
-  "license": "BSD",
+  "license": "Apache License Version 2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/nucle/ng-table-plugins"
