--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "ng-table-plugins",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "author": "Christian Behon <christian.behon@knusperleicht.at",
-  "license": "Apache License Version 2.0",
+  "license": "BSD",
   "repository": {
     "type": "git",
     "url": "https://github.com/nucle/ng-table-plugins"
   },
   "devDependencies": {
-    "grunt-contrib-copy": "~0.8.0",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-requirejs": "~0.4.0",
+    "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "~0.11.2",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "~0.9.1",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.11.2"
+    "grunt-html2js": "^0.3.5",
+    "load-grunt-tasks": "^3.3.0"
   }
 }
