--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "~0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-html2js": "^0.3.5",
     "load-grunt-tasks": "^3.3.0"
   }
