Update codeclimat yml

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,2 +1,8 @@
-examples/**/*
-dist/**/*
+languages:
+  Ruby: false
+  JavaScript: true
+  PHP: false
+  Python: false
+exclude_paths:
+- "examples/**/*"
+- "dist/**/*"
