--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-jshint": "~0.11.2",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "^0.6.1",
